--- a/dark/index.html
+++ b/dark/index.html
@@ -1596,43 +1596,43 @@
     </div>
 
     <!-- Core JS -->
-     <script src="../assets/js/jquery-3.6.0.min.js"></script>
+      <script src="./assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Framework -->
-    <script src="../assets/js/bootstrap.min.js"></script>
+      <script src="./assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
-    <script src="../plugins/wow/wow.min.js"></script>
+    <script src="./plugins/wow/wow.min.js"></script>
 
     <!-- Swiper Slider -->
-    <script src="../plugins/swiper/swiper-bundle.min.js"></script>
-    <script src="../plugins/swiper/swiper-gl.min.js"></script>
+    <script src="./plugins/swiper/swiper-bundle.min.js"></script>
+    <script src="./plugins/swiper/swiper-gl.min.js"></script>
 
     <!-- Odometer Counter -->
-    <script src="../plugins/odometer/appear.js"></script>
-    <script src="../plugins/odometer/odometer.js"></script>
+    <script src="./plugins/odometer/appear.js"></script>
+    <script src="./plugins/odometer/odometer.js"></script>
 
     <!-- Projects -->
-    <script src="../plugins/isotope/isotope.pkgd.min.js"></script>
-    <script src="../plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script src="./plugins/isotope/isotope.pkgd.min.js"></script>
+    <script src="./plugins/isotope/imagesloaded.pkgd.min.js"></script>
     <!-- <script src="../plugins/isotope/jquery.hoverdir.js"></script>-->
-    <script src="../plugins/isotope/tilt.jquery.js"></script>
-    <script src="../plugins/isotope/isotope-init.js"></script>
+    <script src="./plugins/isotope/tilt.jquery.js"></script>
+    <script src="./plugins/isotope/isotope-init.js"></script>
 
     <!-- Fancybox -->
-    <script src="../plugins/fancybox/jquery.fancybox.min.js"></script>
+    <script src="./plugins/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- Flatpickr -->
-    <script src="../plugins/flatpickr/flatpickr.min.js"></script>
+    <script src="./plugins/flatpickr/flatpickr.min.js"></script>
 
     <!-- Nice Select -->
-    <script src="../plugins/nice-select/jquery.nice-select.min.js"></script>
+    <script src="./plugins/nice-select/jquery.nice-select.min.js"></script>
 
     <!-- Cursor Effect -->
-    <script src="../plugins/cursor-effect/cursor-effect.js"></script>
+    <script src="./plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="../assets/js/theme.js"></script>
+    <script src="./assets/js/theme.js"></script>
   </body>
 
   <!-- Mirrored from wpthemebooster.com/demo/themeforest/html/kimono/dark/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 02 Oct 2024 16:00:19 GMT -->
